--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html
     background-color: black;
     align-items: center;
     opacity: 0.8;
-    position: sticky;
+    position: fixed;
 }
 /* LOGO */
 .logo img
@@ -37,6 +37,12 @@ html
     list-style: none;
     font-family: "Delius Unicase", cursive;
     font-size: 0.8rem;
+}
+#navbar ul li:hover
+{
+    margin-top: -0.4em;
+    margin-bottom: 0.4em;
+    transition-duration: 0.3s;
 }
 #navbar ul li a
 {
@@ -59,7 +65,7 @@ html
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 70px 250px;
+    padding: 7em 10em;
 }
 .home img
 {
@@ -80,6 +86,7 @@ html
     color: white;
     font-family: "Delius Unicase", cursive;
     font-size: 27px;
+    text-align: center;
 }
 .h-text
 {
@@ -105,6 +112,12 @@ html
     border-radius: 30px;
     border: 5px solid rgb(255, 89, 0);
 }
+#services div .nxt
+{
+    height: auto;
+    width: auto;
+    border-radius: 100%;
+}
 #services .wd
 {
     border: 3px solid red;
@@ -127,7 +140,7 @@ margin: 10px;margin: 5px;
 }
 #services .wd p
 {
-    font-size: 0.9rem;
+    font-size: 1rem;
     margin: 15px;
 }
 #services .ec
@@ -152,7 +165,7 @@ margin: 10px;margin: 5px;
 }
 #services .ec p
 {
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
     margin: 15px;
 }
 #services .cm
@@ -177,7 +190,7 @@ margin: 10px;margin: 5px;
 }
 #services .cm p
 {
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
     margin: 15px;
 }
 #services .wh
@@ -202,7 +215,7 @@ margin: 10px;margin: 5px;
 }
 #services .wh p
 {
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
     margin: 15px;
 }
 #services .dm
@@ -227,7 +240,7 @@ margin: 10px;margin: 5px;
 }
 #services .dm p
 {
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
     margin: 15px 0px;
 }
 /* CLIENTS SECTION */
@@ -235,6 +248,7 @@ margin: 10px;margin: 5px;
 {
     height: 200px;
     background: url("https://cdn.pixabay.com/photo/2017/07/27/23/00/background-2547097_640.jpg");
+    background-size: cover;
     margin-top: 20px;
 }
 #clients h1
@@ -242,13 +256,21 @@ margin: 10px;margin: 5px;
     text-align: center;
     font-size: 2rem;
     padding: 10px 0px;
+    text-shadow: 1px 1px #080707;
 }
 #clients img
 {
     height: 85px;
     width: 85px;
     border-radius: 85px;
-    margin: 20px 39px;
+    margin: 20px 80px;
+    box-shadow: 3px 3px #423c3c;
+}
+#clients img:hover
+{
+    margin-top: -2em;
+    margin-bottom: 2em;
+    transition-duration: 0.3s;
 }
 /* CONTACT US SECTION */
 #contact
@@ -256,6 +278,7 @@ margin: 10px;margin: 5px;
     height: 500px;
     width: 100%;
     background: url("https://cdn.pixabay.com/photo/2016/05/05/02/37/sunset-1373171_1280.jpg");
+    background-size: cover;
     display: flex;
 }
 #contact .info
@@ -267,6 +290,7 @@ margin: 10px;margin: 5px;
     position: absolute;
     /* display: flex; */
     margin: 80px 0px;
+    align-self: center;
 }
 #contact .info h3
 {
